--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
   },
   "private": true,
   "dependencies": {
-    "@fastify/autoload": "~5.7.1",
-    "@fastify/sensible": "~5.2.0",
+    "@fastify/autoload": "~5.8.0",
+    "@fastify/sensible": "~5.5.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
-    "@swc/helpers": "~0.5.2",
-    "axios": "^1.0.0",
-    "fastify": "~4.13.0",
-    "fastify-plugin": "~4.5.0",
+    "@swc/helpers": "~0.5.3",
+    "axios": "^1.6.2",
+    "fastify": "~4.24.3",
+    "fastify-plugin": "~4.5.1",
     "json-to-url": "^1.0.5",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2",
-    "tslib": "^2.3.0",
+    "react-router-dom": "6.20.1",
+    "tslib": "^2.6.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -37,20 +37,21 @@
     "@nx/react": "^17.1.3",
     "@nx/vite": "17.1.3",
     "@nx/workspace": "17.1.3",
-    "@swc-node/register": "~1.6.7",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.85",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@vitejs/plugin-react": "~4.0.0",
+    "@swc-node/register": "~1.6.8",
+    "@swc/cli": "~0.1.63",
+    "@swc/core": "~1.3.100",
+    "@types/node": "20.10.3",
+    "@types/react": "18.2.41",
+    "@types/react-dom": "18.2.17",
+    "@vitejs/plugin-react": "~4.2.0",
     "javascript-obfuscator": "^4.1.0",
-    "jsdom": "~22.1.0",
+    "jsdom": "~23.0.1",
     "nx": "17.1.3",
-    "prettier": "^2.6.2",
-    "sass": "^1.55.0",
+    "prettier": "^3.1.0",
+    "sass": "^1.69.5",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2",
-    "vite": "~4.3.9"
+    "typescript": "~5.3.2",
+    "vite": "~4.3.9",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
