--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -12,7 +12,7 @@
         "platform": "node",
         "outputPath": "dist/packages/server",
         "format": ["cjs"],
-        "bundle": false,
+        "bundle": true,
         "main": "packages/server/src/main.ts",
         "tsConfig": "packages/server/tsconfig.app.json",
         "assets": ["packages/server/src/assets"],
